# JMcomic-Downloader

./: .gitignore  Changelog  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  pre-release.yml  release.yml
.hermes/plans/: modernize-project.md
main/: JMdownloader.py  JMdownloaderOrigin.py
scr/: build_exe.py  jmcomic_downloader.py  jmcomic_downloaderToEXEver.py  requirements.txt
scr/module/: res.py
src/: history.yml  jmcomic_downloader.py  requirements.txt  run.py
src/jmcomic_downloader/: __init__.py  config.py  core.py  history.py  test_domain.py  text.py  ui.py
src/libs/: core.py  res.py  test.py  text.py  ui.py
src/libs/self/: config.py  core.py  history.py  test_domain.py  text.py  ui.py
tests/: show_welcome_banner.py  test_config.py  test_history.py  test_text.py
