[project]
name = "jmcomic-downloader"
version = "1.0.0"
description = "基于 Python 开发的命令行漫画下载工具"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Eix0721" },
]
requires-python = ">=3.10"
dependencies = [
    "jmcomic",
    "InquirerPy",
    "PyYAML",
    "simpsave",
]

[project.scripts]
jmcomic-downloader = "jmcomic_downloader:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jmcomic_downloader*"]

[tool.uv]
package = true
